--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -108,10 +108,12 @@
     },
 
     "addressForm" : {
+        "is_business": "Use company name",
         "customer_email" : "Your email address",
         "billing_address_title": "Billing Address",
         "billing_address_first_name": "First name",
         "billing_address_last_name": "Last name",
+        "billing_address_company": "Company name",
         "billing_address_line_1": "Address line 1",
         "billing_address_line_2": "Address line 2",
         "billing_address_city": "City",
@@ -125,6 +127,7 @@
         "ship_to_different_address": "Ship to different address",
         "shipping_address_title": "Shipping Address",
         "shipping_address_first_name": "First name",
+        "shipping_address_company": "Ragione sociale",
         "shipping_address_last_name": "Last name",
         "shipping_address_line_1": "Address line 1",
         "shipping_address_line_2": "Address line 2",
