--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -41,6 +41,7 @@
         "quantity_other": "QUANTITY: {{count}}",
         "quantity_stock": "QUANTITY: <0/>",
         "discount_amount": "Discount",
+        "discount_pending": "Please fill the shipping form to view discounts",
         "adjustment_amount": "Adjustments total",
         "giftcard_amount": "Gift card",
         "tax_amount": "Tax",
