--- a/public/static/locales/it/common.json
+++ b/public/static/locales/it/common.json
@@ -42,6 +42,7 @@
         "quantity_other": "QUANTITÀ: {{count}}",
         "quantity_stock": "QUANTITÀ: <0/>",
         "discount_amount": "Sconto",
+        "discount_pending": "Inserisci l'indirizzo di spedizione per visualizzare gli sconti",
         "adjustment_amount": "Totale Adjustments",
         "giftcard_amount": "Gift card",
         "tax_amount": "Tasse",
